--- a/css/memes.css
+++ b/css/memes.css
@@ -670,6 +670,10 @@ header{
     padding: 25px;
     border-radius: .5rem;
     transition: all .3s; }
+    @media only screen and (min-width: 58.6em) {
+      .blog-slider{
+        margin-top: 2.7rem; }
+    }
       .blog-slider__item {
         display: flex;
         align-items: center;
@@ -724,13 +728,14 @@ header{
           .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(15) {
             transition-delay: 1.7s;
           }
+          
             .blog-slider__img {
               width: 23rem;
               height: 23rem;
               flex-shrink: 0;
               box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
               border-radius: .5rem;
-              transform: translate(0, -50%);
+              transform: translate(0%, -50%);
               overflow: hidden; }
               .blog-slider__img img {
                 width: 100%;
@@ -745,7 +750,13 @@ header{
               flex-direction: column;
               justify-content: center;
               align-items: center;
+              transform: translateY(-20%);
               line-height: 10px; }
+              @media only screen and (min-width: 58.6em) {
+                .blog-slider__content{
+                  transform: translate(10%, -55%);
+                  width: 65%;}
+              }
               .blog-slider__content > * {
                 opacity: 0;
                 transition: all .4s; }
@@ -775,7 +786,7 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-bottom: 8rem; }
+        padding-bottom: 6rem; }
         .blog-slider__pagination .swiper-pagination-bullet {
           width: 11px;
           height: 11px;
@@ -790,6 +801,19 @@ header{
             height: 11px;
             width: 30px;
             box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3); }
+          @media only screen and (min-width: 58.6em) {
+            .blog-slider__img {
+              transform: translate(-160%, 33%);}
+            .blog-slider__pagination{
+              flex-direction: column;
+              align-items: flex-end;
+              padding-right: 2rem !important;
+              gap: .5rem;
+              padding: 0; }
+            .blog-slider__pagination .swiper-pagination-bullet-active{
+              height: 30px;
+              width: 11px}
+          }
 
 .footer__section {
   background: #000;
